// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing FilterPopup Component has onRef 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FilterPopup
    onFilterThunk={[Function]}
    onRef={[Function]}
    position={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    toggle={[Function]}
  >
    <View />
  </FilterPopup>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Styled(Button)
          disabled={false}
          iconLeft={true}
          info={true}
          transparent={true}
        >
          <Styled(Icon)
            name="link"
            style={
              Object {
                "textAlign": "center",
                "width": 25,
              }
            }
            type="MaterialIcons"
          />
          <Styled(Text)>
            From Moodle
          </Styled(Text)>
        </Styled(Button)>,
        <Styled(Button)
          disabled={false}
          iconLeft={true}
          success={true}
          transparent={true}
        >
          <Styled(Icon)
            name="clock-fast"
            style={
              Object {
                "textAlign": "center",
                "width": 25,
              }
            }
            type="MaterialCommunityIcons"
          />
          <Styled(Text)>
            Latest Post
          </Styled(Text)>
        </Styled(Button)>,
        <Styled(Button)
          disabled={false}
          iconLeft={true}
          success={true}
          transparent={true}
        >
          <Styled(Icon)
            name="undo"
            style={
              Object {
                "textAlign": "center",
                "width": 25,
              }
            }
          />
          <Styled(Text)>
            Most Replied
          </Styled(Text)>
        </Styled(Button)>,
        <Styled(Button)
          disabled={false}
          iconLeft={true}
          success={true}
          transparent={true}
        >
          <Styled(Icon)
            name="people"
            style={
              Object {
                "textAlign": "center",
                "width": 25,
              }
            }
            type="MaterialIcons"
          />
          <Styled(Text)>
            Popularity
          </Styled(Text)>
        </Styled(Button)>,
      ],
      "position": Object {
        "x": 0,
        "y": 0,
      },
      "toggle": [Function],
    },
    "ref": [Function],
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Styled(Icon)
              name="link"
              style={
                Object {
                  "textAlign": "center",
                  "width": 25,
                }
              }
              type="MaterialIcons"
            />,
            <Styled(Text)>
              From Moodle
            </Styled(Text)>,
          ],
          "disabled": false,
          "iconLeft": true,
          "info": true,
          "onPress": undefined,
          "transparent": true,
          "virtual": undefined,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "name": "link",
              "style": Object {
                "textAlign": "center",
                "width": 25,
              },
              "type": "MaterialIcons",
              "virtual": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "From Moodle",
              "virtual": undefined,
            },
            "ref": null,
            "rendered": "From Moodle",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Styled(Icon)
              name="clock-fast"
              style={
                Object {
                  "textAlign": "center",
                  "width": 25,
                }
              }
              type="MaterialCommunityIcons"
            />,
            <Styled(Text)>
              Latest Post
            </Styled(Text)>,
          ],
          "disabled": false,
          "iconLeft": true,
          "onPress": undefined,
          "success": true,
          "transparent": true,
          "virtual": undefined,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "name": "clock-fast",
              "style": Object {
                "textAlign": "center",
                "width": 25,
              },
              "type": "MaterialCommunityIcons",
              "virtual": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Latest Post",
              "virtual": undefined,
            },
            "ref": null,
            "rendered": "Latest Post",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Styled(Icon)
              name="undo"
              style={
                Object {
                  "textAlign": "center",
                  "width": 25,
                }
              }
            />,
            <Styled(Text)>
              Most Replied
            </Styled(Text)>,
          ],
          "disabled": false,
          "iconLeft": true,
          "onPress": undefined,
          "success": true,
          "transparent": true,
          "virtual": undefined,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "name": "undo",
              "style": Object {
                "textAlign": "center",
                "width": 25,
              },
              "virtual": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Most Replied",
              "virtual": undefined,
            },
            "ref": null,
            "rendered": "Most Replied",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Styled(Icon)
              name="people"
              style={
                Object {
                  "textAlign": "center",
                  "width": 25,
                }
              }
              type="MaterialIcons"
            />,
            <Styled(Text)>
              Popularity
            </Styled(Text)>,
          ],
          "disabled": false,
          "iconLeft": true,
          "onPress": undefined,
          "success": true,
          "transparent": true,
          "virtual": undefined,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "name": "people",
              "style": Object {
                "textAlign": "center",
                "width": 25,
              },
              "type": "MaterialIcons",
              "virtual": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Popularity",
              "virtual": undefined,
            },
            "ref": null,
            "rendered": "Popularity",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Styled(Button)
            disabled={false}
            iconLeft={true}
            info={true}
            transparent={true}
          >
            <Styled(Icon)
              name="link"
              style={
                Object {
                  "textAlign": "center",
                  "width": 25,
                }
              }
              type="MaterialIcons"
            />
            <Styled(Text)>
              From Moodle
            </Styled(Text)>
          </Styled(Button)>,
          <Styled(Button)
            disabled={false}
            iconLeft={true}
            success={true}
            transparent={true}
          >
            <Styled(Icon)
              name="clock-fast"
              style={
                Object {
                  "textAlign": "center",
                  "width": 25,
                }
              }
              type="MaterialCommunityIcons"
            />
            <Styled(Text)>
              Latest Post
            </Styled(Text)>
          </Styled(Button)>,
          <Styled(Button)
            disabled={false}
            iconLeft={true}
            success={true}
            transparent={true}
          >
            <Styled(Icon)
              name="undo"
              style={
                Object {
                  "textAlign": "center",
                  "width": 25,
                }
              }
            />
            <Styled(Text)>
              Most Replied
            </Styled(Text)>
          </Styled(Button)>,
          <Styled(Button)
            disabled={false}
            iconLeft={true}
            success={true}
            transparent={true}
          >
            <Styled(Icon)
              name="people"
              style={
                Object {
                  "textAlign": "center",
                  "width": 25,
                }
              }
              type="MaterialIcons"
            />
            <Styled(Text)>
              Popularity
            </Styled(Text)>
          </Styled(Button)>,
        ],
        "position": Object {
          "x": 0,
          "y": 0,
        },
        "toggle": [Function],
      },
      "ref": [Function],
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Styled(Icon)
                name="link"
                style={
                  Object {
                    "textAlign": "center",
                    "width": 25,
                  }
                }
                type="MaterialIcons"
              />,
              <Styled(Text)>
                From Moodle
              </Styled(Text)>,
            ],
            "disabled": false,
            "iconLeft": true,
            "info": true,
            "onPress": undefined,
            "transparent": true,
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "name": "link",
                "style": Object {
                  "textAlign": "center",
                  "width": 25,
                },
                "type": "MaterialIcons",
                "virtual": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "From Moodle",
                "virtual": undefined,
              },
              "ref": null,
              "rendered": "From Moodle",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Styled(Icon)
                name="clock-fast"
                style={
                  Object {
                    "textAlign": "center",
                    "width": 25,
                  }
                }
                type="MaterialCommunityIcons"
              />,
              <Styled(Text)>
                Latest Post
              </Styled(Text)>,
            ],
            "disabled": false,
            "iconLeft": true,
            "onPress": undefined,
            "success": true,
            "transparent": true,
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "name": "clock-fast",
                "style": Object {
                  "textAlign": "center",
                  "width": 25,
                },
                "type": "MaterialCommunityIcons",
                "virtual": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Latest Post",
                "virtual": undefined,
              },
              "ref": null,
              "rendered": "Latest Post",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Styled(Icon)
                name="undo"
                style={
                  Object {
                    "textAlign": "center",
                    "width": 25,
                  }
                }
              />,
              <Styled(Text)>
                Most Replied
              </Styled(Text)>,
            ],
            "disabled": false,
            "iconLeft": true,
            "onPress": undefined,
            "success": true,
            "transparent": true,
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "name": "undo",
                "style": Object {
                  "textAlign": "center",
                  "width": 25,
                },
                "virtual": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Most Replied",
                "virtual": undefined,
              },
              "ref": null,
              "rendered": "Most Replied",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Styled(Icon)
                name="people"
                style={
                  Object {
                    "textAlign": "center",
                    "width": 25,
                  }
                }
                type="MaterialIcons"
              />,
              <Styled(Text)>
                Popularity
              </Styled(Text)>,
            ],
            "disabled": false,
            "iconLeft": true,
            "onPress": undefined,
            "success": true,
            "transparent": true,
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "name": "people",
                "style": Object {
                  "textAlign": "center",
                  "width": 25,
                },
                "type": "MaterialIcons",
                "virtual": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Popularity",
                "virtual": undefined,
              },
              "ref": null,
              "rendered": "Popularity",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Testing FilterPopup Component renders as expected with PopupMenu required props 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FilterPopup
    onFilterThunk={[Function]}
    position={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    toggle={[Function]}
  >
    <View />
  </FilterPopup>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Styled(Button)
          disabled={false}
          iconLeft={true}
          info={true}
          transparent={true}
        >
          <Styled(Icon)
            name="link"
            style={
              Object {
                "textAlign": "center",
                "width": 25,
              }
            }
            type="MaterialIcons"
          />
          <Styled(Text)>
            From Moodle
          </Styled(Text)>
        </Styled(Button)>,
        <Styled(Button)
          disabled={false}
          iconLeft={true}
          success={true}
          transparent={true}
        >
          <Styled(Icon)
            name="clock-fast"
            style={
              Object {
                "textAlign": "center",
                "width": 25,
              }
            }
            type="MaterialCommunityIcons"
          />
          <Styled(Text)>
            Latest Post
          </Styled(Text)>
        </Styled(Button)>,
        <Styled(Button)
          disabled={false}
          iconLeft={true}
          success={true}
          transparent={true}
        >
          <Styled(Icon)
            name="undo"
            style={
              Object {
                "textAlign": "center",
                "width": 25,
              }
            }
          />
          <Styled(Text)>
            Most Replied
          </Styled(Text)>
        </Styled(Button)>,
        <Styled(Button)
          disabled={false}
          iconLeft={true}
          success={true}
          transparent={true}
        >
          <Styled(Icon)
            name="people"
            style={
              Object {
                "textAlign": "center",
                "width": 25,
              }
            }
            type="MaterialIcons"
          />
          <Styled(Text)>
            Popularity
          </Styled(Text)>
        </Styled(Button)>,
      ],
      "position": Object {
        "x": 0,
        "y": 0,
      },
      "toggle": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Styled(Icon)
              name="link"
              style={
                Object {
                  "textAlign": "center",
                  "width": 25,
                }
              }
              type="MaterialIcons"
            />,
            <Styled(Text)>
              From Moodle
            </Styled(Text)>,
          ],
          "disabled": false,
          "iconLeft": true,
          "info": true,
          "onPress": undefined,
          "transparent": true,
          "virtual": undefined,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "name": "link",
              "style": Object {
                "textAlign": "center",
                "width": 25,
              },
              "type": "MaterialIcons",
              "virtual": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "From Moodle",
              "virtual": undefined,
            },
            "ref": null,
            "rendered": "From Moodle",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Styled(Icon)
              name="clock-fast"
              style={
                Object {
                  "textAlign": "center",
                  "width": 25,
                }
              }
              type="MaterialCommunityIcons"
            />,
            <Styled(Text)>
              Latest Post
            </Styled(Text)>,
          ],
          "disabled": false,
          "iconLeft": true,
          "onPress": undefined,
          "success": true,
          "transparent": true,
          "virtual": undefined,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "name": "clock-fast",
              "style": Object {
                "textAlign": "center",
                "width": 25,
              },
              "type": "MaterialCommunityIcons",
              "virtual": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Latest Post",
              "virtual": undefined,
            },
            "ref": null,
            "rendered": "Latest Post",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Styled(Icon)
              name="undo"
              style={
                Object {
                  "textAlign": "center",
                  "width": 25,
                }
              }
            />,
            <Styled(Text)>
              Most Replied
            </Styled(Text)>,
          ],
          "disabled": false,
          "iconLeft": true,
          "onPress": undefined,
          "success": true,
          "transparent": true,
          "virtual": undefined,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "name": "undo",
              "style": Object {
                "textAlign": "center",
                "width": 25,
              },
              "virtual": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Most Replied",
              "virtual": undefined,
            },
            "ref": null,
            "rendered": "Most Replied",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Styled(Icon)
              name="people"
              style={
                Object {
                  "textAlign": "center",
                  "width": 25,
                }
              }
              type="MaterialIcons"
            />,
            <Styled(Text)>
              Popularity
            </Styled(Text)>,
          ],
          "disabled": false,
          "iconLeft": true,
          "onPress": undefined,
          "success": true,
          "transparent": true,
          "virtual": undefined,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "name": "people",
              "style": Object {
                "textAlign": "center",
                "width": 25,
              },
              "type": "MaterialIcons",
              "virtual": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Popularity",
              "virtual": undefined,
            },
            "ref": null,
            "rendered": "Popularity",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Styled(Button)
            disabled={false}
            iconLeft={true}
            info={true}
            transparent={true}
          >
            <Styled(Icon)
              name="link"
              style={
                Object {
                  "textAlign": "center",
                  "width": 25,
                }
              }
              type="MaterialIcons"
            />
            <Styled(Text)>
              From Moodle
            </Styled(Text)>
          </Styled(Button)>,
          <Styled(Button)
            disabled={false}
            iconLeft={true}
            success={true}
            transparent={true}
          >
            <Styled(Icon)
              name="clock-fast"
              style={
                Object {
                  "textAlign": "center",
                  "width": 25,
                }
              }
              type="MaterialCommunityIcons"
            />
            <Styled(Text)>
              Latest Post
            </Styled(Text)>
          </Styled(Button)>,
          <Styled(Button)
            disabled={false}
            iconLeft={true}
            success={true}
            transparent={true}
          >
            <Styled(Icon)
              name="undo"
              style={
                Object {
                  "textAlign": "center",
                  "width": 25,
                }
              }
            />
            <Styled(Text)>
              Most Replied
            </Styled(Text)>
          </Styled(Button)>,
          <Styled(Button)
            disabled={false}
            iconLeft={true}
            success={true}
            transparent={true}
          >
            <Styled(Icon)
              name="people"
              style={
                Object {
                  "textAlign": "center",
                  "width": 25,
                }
              }
              type="MaterialIcons"
            />
            <Styled(Text)>
              Popularity
            </Styled(Text)>
          </Styled(Button)>,
        ],
        "position": Object {
          "x": 0,
          "y": 0,
        },
        "toggle": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Styled(Icon)
                name="link"
                style={
                  Object {
                    "textAlign": "center",
                    "width": 25,
                  }
                }
                type="MaterialIcons"
              />,
              <Styled(Text)>
                From Moodle
              </Styled(Text)>,
            ],
            "disabled": false,
            "iconLeft": true,
            "info": true,
            "onPress": undefined,
            "transparent": true,
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "name": "link",
                "style": Object {
                  "textAlign": "center",
                  "width": 25,
                },
                "type": "MaterialIcons",
                "virtual": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "From Moodle",
                "virtual": undefined,
              },
              "ref": null,
              "rendered": "From Moodle",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Styled(Icon)
                name="clock-fast"
                style={
                  Object {
                    "textAlign": "center",
                    "width": 25,
                  }
                }
                type="MaterialCommunityIcons"
              />,
              <Styled(Text)>
                Latest Post
              </Styled(Text)>,
            ],
            "disabled": false,
            "iconLeft": true,
            "onPress": undefined,
            "success": true,
            "transparent": true,
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "name": "clock-fast",
                "style": Object {
                  "textAlign": "center",
                  "width": 25,
                },
                "type": "MaterialCommunityIcons",
                "virtual": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Latest Post",
                "virtual": undefined,
              },
              "ref": null,
              "rendered": "Latest Post",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Styled(Icon)
                name="undo"
                style={
                  Object {
                    "textAlign": "center",
                    "width": 25,
                  }
                }
              />,
              <Styled(Text)>
                Most Replied
              </Styled(Text)>,
            ],
            "disabled": false,
            "iconLeft": true,
            "onPress": undefined,
            "success": true,
            "transparent": true,
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "name": "undo",
                "style": Object {
                  "textAlign": "center",
                  "width": 25,
                },
                "virtual": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Most Replied",
                "virtual": undefined,
              },
              "ref": null,
              "rendered": "Most Replied",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Styled(Icon)
                name="people"
                style={
                  Object {
                    "textAlign": "center",
                    "width": 25,
                  }
                }
                type="MaterialIcons"
              />,
              <Styled(Text)>
                Popularity
              </Styled(Text)>,
            ],
            "disabled": false,
            "iconLeft": true,
            "onPress": undefined,
            "success": true,
            "transparent": true,
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "name": "people",
                "style": Object {
                  "textAlign": "center",
                  "width": 25,
                },
                "type": "MaterialIcons",
                "virtual": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Popularity",
                "virtual": undefined,
              },
              "ref": null,
              "rendered": "Popularity",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
